--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/repeat"]
 	path = bundle/repeat
 	url = https://github.com/tpope/vim-repeat
+[submodule "bundle/vimvirtualenv"]
+	path = bundle/vimvirtualenv
+	url = https://github.com/jmcantrell/vim-virtualenv.git
