--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/railscaststheme"]
 	path = bundle/railscaststheme
 	url = https://github.com/jpo/vim-railscasts-theme.git
+[submodule "bundle/seek"]
+	path = bundle/seek
+	url = https://github.com/goldfeld/vim-seek.git
